Fix menu in dark mode

--- a/se/styles-filibaba-se.css
+++ b/se/styles-filibaba-se.css
@@ -806,17 +806,11 @@ a.avatarlink {
   }  
   
   .site-nav-active,
+  .site-nav-regular,
   .site-nav-regular:hover,
+  .site-nav-regular:active
   {
     color: white;
-  }
-
-  .site-nav-regular{
-  color: rgba(255, 255, 255, 0.55);
-  }
-  
-  .site-nav-regular:active {
-    color: rgba(255, 255, 255, 0.7);
   }
 
   body {
